--- a/components/pom.xml
+++ b/components/pom.xml
@@ -32,208 +32,208 @@
 
   <modules>
 	  <!-- we want to test these modules first to catch any errors early as possible -->
-    <module>camel-test</module>
-    <module>camel-testng</module>
-    <module>camel-test-blueprint</module>
-    <module>camel-test-spring</module>
-    <module>camel-test-spring3</module>
-    <module>camel-test-spring40</module>
-    <module>camel-core-osgi</module>
-    <module>camel-core-xml</module>
-    <module>camel-blueprint</module>
-    <module>camel-spring</module>
-    <module>camel-bam</module>
-    <module>camel-groovy</module>
-    <module>camel-scala</module>
-    <module>camel-http</module>
-    <module>camel-http4</module>
-    <module>camel-jetty-common</module>
-    <module>camel-jetty8</module>
-    <module>camel-jetty9</module>
-    <!-- camel-jetty is used to republish the camel-jetty8 -->
-    <module>camel-jetty</module>
-    <module>camel-cxf</module>
-    <module>camel-cxf-transport</module>
-    <module>camel-web-standalone</module>
-    <module>camel-jms</module>
-
-    <!-- regular modules in alphabetic order -->
-    <module>camel-ahc</module>
-    <module>camel-ahc-ws</module>
-    <module>camel-amqp</module>
-    <module>camel-apns</module>
-    <module>camel-atmos</module>
-    <module>camel-atmosphere-websocket</module>
-    <module>camel-atom</module>
-    <module>camel-avro</module>
-    <module>camel-aws</module>
-    <module>camel-base64</module>
-    <module>camel-beanio</module>
-    <module>camel-beanstalk</module>
-    <module>camel-bean-validator</module>
-    <module>camel-barcode</module>
-    <module>camel-bindy</module>
-    <module>camel-box</module>
-    <module>camel-cache</module>
-    <module>camel-cassandraql</module>
-    <module>camel-castor</module>
-    <module>camel-cdi</module>
-    <module>camel-chunk</module>
-    <module>camel-cmis</module>
-    <module>camel-cometd</module>
-    <module>camel-context</module>
-    <module>camel-couchdb</module>
-    <module>camel-crypto</module>
-    <module>camel-csv</module>
-    <module>camel-disruptor</module>
-    <module>camel-dns</module>
-    <module>camel-docker</module>
-    <module>camel-dozer</module>
-    <module>camel-dropbox</module>
-    <module>camel-eclipse</module>
-    <module>camel-ejb</module>
-    <module>camel-elasticsearch</module>
-    <module>camel-eventadmin</module>
-    <module>camel-exec</module>
-    <module>camel-facebook</module>
-    <module>camel-flatpack</module>
-    <module>camel-fop</module>
-    <module>camel-freemarker</module>
-    <module>camel-ftp</module>
-    <module>camel-gae</module>
-    <module>camel-ganglia</module>
-    <module>camel-geocoder</module>
-    <module>camel-github</module>
-    <module>camel-google-calendar</module>
-    <module>camel-google-drive</module>
-    <module>camel-google-mail</module>
-    <module>camel-gora</module>
-    <module>camel-gson</module>
-    <module>camel-guava-eventbus</module>
-    <module>camel-guice</module>
-    <module>camel-hawtdb</module>
-    <module>camel-hazelcast</module>
-    <module>camel-hbase</module>
-    <module>camel-hdfs</module>
-    <module>camel-hdfs2</module>
-    <module>camel-hipchat</module>
-    <module>camel-hl7</module>
-    <module>camel-ibatis</module>
-    <module>camel-ical</module>
-    <module>camel-infinispan</module>
-    <module>camel-irc</module>
-    <module>camel-jackson</module>
+    <!-- <module>camel&#45;test</module> -->
+    <!-- <module>camel&#45;testng</module> -->
+    <!-- <module>camel&#45;test&#45;blueprint</module> -->
+    <!-- <module>camel&#45;test&#45;spring</module> -->
+    <!-- <module>camel&#45;test&#45;spring3</module> -->
+    <!-- <module>camel&#45;test&#45;spring40</module> -->
+    <!-- <module>camel&#45;core&#45;osgi</module> -->
+    <!-- <module>camel&#45;core&#45;xml</module> -->
+    <!-- <module>camel&#45;blueprint</module> -->
+    <!-- <module>camel&#45;spring</module> -->
+    <!-- <module>camel&#45;bam</module> -->
+    <!-- <module>camel&#45;groovy</module> -->
+    <!-- <module>camel&#45;scala</module> -->
+    <!-- <module>camel&#45;http</module> -->
+    <!-- <module>camel&#45;http4</module> -->
+    <!-- <module>camel&#45;jetty&#45;common</module> -->
+    <!-- <module>camel&#45;jetty8</module> -->
+    <!-- <module>camel&#45;jetty9</module> -->
+    <!-- <!&#45;&#45; camel&#45;jetty is used to republish the camel&#45;jetty8 &#45;&#45;> -->
+    <!-- <module>camel&#45;jetty</module> -->
+    <!-- <module>camel&#45;cxf</module> -->
+    <!-- <module>camel&#45;cxf&#45;transport</module> -->
+    <!-- <module>camel&#45;web&#45;standalone</module> -->
+    <!-- <module>camel&#45;jms</module> -->
+    <!--  -->
+    <!-- <!&#45;&#45; regular modules in alphabetic order &#45;&#45;> -->
+    <!-- <module>camel&#45;ahc</module> -->
+    <!-- <module>camel&#45;ahc&#45;ws</module> -->
+    <!-- <module>camel&#45;amqp</module> -->
+    <!-- <module>camel&#45;apns</module> -->
+    <!-- <module>camel&#45;atmos</module> -->
+    <!-- <module>camel&#45;atmosphere&#45;websocket</module> -->
+    <!-- <module>camel&#45;atom</module> -->
+    <!-- <module>camel&#45;avro</module> -->
+    <!-- <module>camel&#45;aws</module> -->
+    <!-- <module>camel&#45;base64</module> -->
+    <!-- <module>camel&#45;beanio</module> -->
+    <!-- <module>camel&#45;beanstalk</module> -->
+    <!-- <module>camel&#45;bean&#45;validator</module> -->
+    <!-- <module>camel&#45;barcode</module> -->
+    <!-- <module>camel&#45;bindy</module> -->
+    <!-- <module>camel&#45;box</module> -->
+    <!-- <module>camel&#45;cache</module> -->
+    <!-- <module>camel&#45;cassandraql</module> -->
+    <!-- <module>camel&#45;castor</module> -->
+    <!-- <module>camel&#45;cdi</module> -->
+    <!-- <module>camel&#45;chunk</module> -->
+    <!-- <module>camel&#45;cmis</module> -->
+    <!-- <module>camel&#45;cometd</module> -->
+    <!-- <module>camel&#45;context</module> -->
+    <!-- <module>camel&#45;couchdb</module> -->
+    <!-- <module>camel&#45;crypto</module> -->
+    <!-- <module>camel&#45;csv</module> -->
+    <!-- <module>camel&#45;disruptor</module> -->
+    <!-- <module>camel&#45;dns</module> -->
+    <!-- <module>camel&#45;docker</module> -->
+    <!-- <module>camel&#45;dozer</module> -->
+    <!-- <module>camel&#45;dropbox</module> -->
+    <!-- <module>camel&#45;eclipse</module> -->
+    <!-- <module>camel&#45;ejb</module> -->
+    <!-- <module>camel&#45;elasticsearch</module> -->
+    <!-- <module>camel&#45;eventadmin</module> -->
+    <!-- <module>camel&#45;exec</module> -->
+    <!-- <module>camel&#45;facebook</module> -->
+    <!-- <module>camel&#45;flatpack</module> -->
+    <!-- <module>camel&#45;fop</module> -->
+    <!-- <module>camel&#45;freemarker</module> -->
+    <!-- <module>camel&#45;ftp</module> -->
+    <!-- <module>camel&#45;gae</module> -->
+    <!-- <module>camel&#45;ganglia</module> -->
+    <!-- <module>camel&#45;geocoder</module> -->
+    <!-- <module>camel&#45;github</module> -->
+    <!-- <module>camel&#45;google&#45;calendar</module> -->
+    <!-- <module>camel&#45;google&#45;drive</module> -->
+    <!-- <module>camel&#45;google&#45;mail</module> -->
+    <!-- <module>camel&#45;gora</module> -->
+    <!-- <module>camel&#45;gson</module> -->
+    <!-- <module>camel&#45;guava&#45;eventbus</module> -->
+    <!-- <module>camel&#45;guice</module> -->
+    <!-- <module>camel&#45;hawtdb</module> -->
+    <!-- <module>camel&#45;hazelcast</module> -->
+    <!-- <module>camel&#45;hbase</module> -->
+    <!-- <module>camel&#45;hdfs</module> -->
+    <!-- <module>camel&#45;hdfs2</module> -->
+    <!-- <module>camel&#45;hipchat</module> -->
+    <!-- <module>camel&#45;hl7</module> -->
+    <!-- <module>camel&#45;ibatis</module> -->
+    <!-- <module>camel&#45;ical</module> -->
+    <!-- <module>camel&#45;infinispan</module> -->
+    <!-- <module>camel&#45;irc</module> -->
+    <!-- <module>camel&#45;jackson</module> -->
     <module>camel-javaspace</module>
-    <module>camel-jaxb</module>
-    <module>camel-jasypt</module>
-    <module>camel-jclouds</module>
-    <module>camel-jcr</module>
-    <module>camel-jdbc</module>
-    <module>camel-jgroups</module>
-    <!-- camel-jibx doesn't work under JDK8, but may be build without tests -->
-    <module>camel-jibx</module>
-    <module>camel-jing</module>
-    <module>camel-jira</module>
-    <module>camel-jmx</module>
-    <module>camel-josql</module>
-    <module>camel-jpa</module>
-    <module>camel-jsonpath</module>
-    <module>camel-jsch</module>
-    <module>camel-jt400</module>
-    <module>camel-juel</module>
-    <module>camel-jxpath</module>
+    <!-- <module>camel&#45;jaxb</module> -->
+    <!-- <module>camel&#45;jasypt</module> -->
+    <!-- <module>camel&#45;jclouds</module> -->
+    <!-- <module>camel&#45;jcr</module> -->
+    <!-- <module>camel&#45;jdbc</module> -->
+    <!-- <module>camel&#45;jgroups</module> -->
+    <!-- <!&#45;&#45; camel&#45;jibx doesn't work under JDK8, but may be build without tests &#45;&#45;> -->
+    <!-- <module>camel&#45;jibx</module> -->
+    <!-- <module>camel&#45;jing</module> -->
+    <!-- <module>camel&#45;jira</module> -->
+    <!-- <module>camel&#45;jmx</module> -->
+    <!-- <module>camel&#45;josql</module> -->
+    <!-- <module>camel&#45;jpa</module> -->
+    <!-- <module>camel&#45;jsonpath</module> -->
+    <!-- <module>camel&#45;jsch</module> -->
+    <!-- <module>camel&#45;jt400</module> -->
+    <!-- <module>camel&#45;juel</module> -->
+    <!-- <module>camel&#45;jxpath</module> -->
     <module>camel-kafka</module>
-    <module>camel-kestrel</module>
-    <module>camel-krati</module>
-    <module>camel-kura</module>
-    <module>camel-ldap</module>
-    <module>camel-leveldb</module>
-    <module>camel-linkedin</module>
-    <module>camel-lucene</module>
-    <module>camel-mail</module>
-    <module>camel-metrics</module>
-    <module>camel-mina</module>
-    <module>camel-mina2</module>
-    <module>camel-mongodb</module>
-    <module>camel-mqtt</module>
-    <module>camel-msv</module>
-    <module>camel-mustache</module>
-    <module>camel-mvel</module>
-    <module>camel-mybatis</module>
-    <module>camel-nagios</module>
-    <module>camel-netty</module>
-    <module>camel-netty4</module>
-    <module>camel-netty-http</module>
-    <module>camel-netty4-http</module>
-    <module>camel-ognl</module>
-    <module>camel-olingo2</module>
-    <module>camel-openshift</module>
-    <module>camel-optaplanner</module>
-    <module>camel-paxlogging</module>
-    <module>camel-pgevent</module>
-    <module>camel-printer</module>
-    <module>camel-protobuf</module>
-    <module>camel-quartz</module>
-    <module>camel-quartz2</module>
-    <module>camel-quickfix</module>
-    <module>camel-rabbitmq</module>
-    <module>camel-restlet</module>
-    <module>camel-rmi</module>
-    <module>camel-routebox</module>
-    <module>camel-rss</module>
-    <module>camel-ruby</module>
-    <module>camel-rx</module>
-    <module>camel-sap-netweaver</module>
-    <module>camel-saxon</module>
-    <module>camel-salesforce</module>
-    <module>camel-schematron</module>
-    <module>camel-scr</module>
-    <module>camel-script</module>
-    <module>camel-servlet</module>
-    <module>camel-servletlistener</module>
-    <module>camel-shiro</module>
-    <module>camel-sip</module>
-    <module>camel-smpp</module>
-    <module>camel-snmp</module>
-    <module>camel-sjms</module>
-    <module>camel-soap</module>
-    <module>camel-solr</module>
-    <module>camel-spark-rest</module>
-    <module>camel-splunk</module>
-    <module>camel-spring-batch</module>
-    <module>camel-spring-boot</module>
-    <module>camel-spring-javaconfig</module>
-    <module>camel-spring-integration</module>
-    <module>camel-spring-ldap</module>
-    <module>camel-spring-redis</module>
-    <module>camel-spring-security</module>
-    <module>camel-spring-ws</module>
-    <module>camel-sql</module>
-    <module>camel-ssh</module>
-    <module>camel-stax</module>
-    <module>camel-stomp</module>
-    <module>camel-stream</module>
-    <module>camel-stringtemplate</module>
-    <module>camel-syslog</module>
-    <module>camel-swagger</module>
-    <module>camel-tagsoup</module>
-    <module>camel-twitter</module>
-    <module>camel-univocity-parsers</module>
-    <module>camel-urlrewrite</module>
-    <module>camel-velocity</module>
-    <module>camel-vertx</module>
-    <module>camel-weather</module>
-    <module>camel-web</module>
-    <module>camel-websocket</module>
-    <module>camel-xmlbeans</module>
-    <module>camel-xmljson</module>
-    <module>camel-xmlrpc</module>
-    <module>camel-xmlsecurity</module>
-    <module>camel-xmpp</module>
-    <module>camel-xstream</module>
-    <module>camel-yammer</module>
-    <module>camel-zipfile</module>
-    <module>camel-zookeeper</module>
+    <!-- <module>camel&#45;kestrel</module> -->
+    <!-- <module>camel&#45;krati</module> -->
+    <!-- <module>camel&#45;kura</module> -->
+    <!-- <module>camel&#45;ldap</module> -->
+    <!-- <module>camel&#45;leveldb</module> -->
+    <!-- <module>camel&#45;linkedin</module> -->
+    <!-- <module>camel&#45;lucene</module> -->
+    <!-- <module>camel&#45;mail</module> -->
+    <!-- <module>camel&#45;metrics</module> -->
+    <!-- <module>camel&#45;mina</module> -->
+    <!-- <module>camel&#45;mina2</module> -->
+    <!-- <module>camel&#45;mongodb</module> -->
+    <!-- <module>camel&#45;mqtt</module> -->
+    <!-- <module>camel&#45;msv</module> -->
+    <!-- <module>camel&#45;mustache</module> -->
+    <!-- <module>camel&#45;mvel</module> -->
+    <!-- <module>camel&#45;mybatis</module> -->
+    <!-- <module>camel&#45;nagios</module> -->
+    <!-- <module>camel&#45;netty</module> -->
+    <!-- <module>camel&#45;netty4</module> -->
+    <!-- <module>camel&#45;netty&#45;http</module> -->
+    <!-- <module>camel&#45;netty4&#45;http</module> -->
+    <!-- <module>camel&#45;ognl</module> -->
+    <!-- <module>camel&#45;olingo2</module> -->
+    <!-- <module>camel&#45;openshift</module> -->
+    <!-- <module>camel&#45;optaplanner</module> -->
+    <!-- <module>camel&#45;paxlogging</module> -->
+    <!-- <module>camel&#45;pgevent</module> -->
+    <!-- <module>camel&#45;printer</module> -->
+    <!-- <module>camel&#45;protobuf</module> -->
+    <!-- <module>camel&#45;quartz</module> -->
+    <!-- <module>camel&#45;quartz2</module> -->
+    <!-- <module>camel&#45;quickfix</module> -->
+    <!-- <module>camel&#45;rabbitmq</module> -->
+    <!-- <module>camel&#45;restlet</module> -->
+    <!-- <module>camel&#45;rmi</module> -->
+    <!-- <module>camel&#45;routebox</module> -->
+    <!-- <module>camel&#45;rss</module> -->
+    <!-- <module>camel&#45;ruby</module> -->
+    <!-- <module>camel&#45;rx</module> -->
+    <!-- <module>camel&#45;sap&#45;netweaver</module> -->
+    <!-- <module>camel&#45;saxon</module> -->
+    <!-- <module>camel&#45;salesforce</module> -->
+    <!-- <module>camel&#45;schematron</module> -->
+    <!-- <module>camel&#45;scr</module> -->
+    <!-- <module>camel&#45;script</module> -->
+    <!-- <module>camel&#45;servlet</module> -->
+    <!-- <module>camel&#45;servletlistener</module> -->
+    <!-- <module>camel&#45;shiro</module> -->
+    <!-- <module>camel&#45;sip</module> -->
+    <!-- <module>camel&#45;smpp</module> -->
+    <!-- <module>camel&#45;snmp</module> -->
+    <!-- <module>camel&#45;sjms</module> -->
+    <!-- <module>camel&#45;soap</module> -->
+    <!-- <module>camel&#45;solr</module> -->
+    <!-- <module>camel&#45;spark&#45;rest</module> -->
+    <!-- <module>camel&#45;splunk</module> -->
+    <!-- <module>camel&#45;spring&#45;batch</module> -->
+    <!-- <module>camel&#45;spring&#45;boot</module> -->
+    <!-- <module>camel&#45;spring&#45;javaconfig</module> -->
+    <!-- <module>camel&#45;spring&#45;integration</module> -->
+    <!-- <module>camel&#45;spring&#45;ldap</module> -->
+    <!-- <module>camel&#45;spring&#45;redis</module> -->
+    <!-- <module>camel&#45;spring&#45;security</module> -->
+    <!-- <module>camel&#45;spring&#45;ws</module> -->
+    <!-- <module>camel&#45;sql</module> -->
+    <!-- <module>camel&#45;ssh</module> -->
+    <!-- <module>camel&#45;stax</module> -->
+    <!-- <module>camel&#45;stomp</module> -->
+    <!-- <module>camel&#45;stream</module> -->
+    <!-- <module>camel&#45;stringtemplate</module> -->
+    <!-- <module>camel&#45;syslog</module> -->
+    <!-- <module>camel&#45;swagger</module> -->
+    <!-- <module>camel&#45;tagsoup</module> -->
+    <!-- <module>camel&#45;twitter</module> -->
+    <!-- <module>camel&#45;univocity&#45;parsers</module> -->
+    <!-- <module>camel&#45;urlrewrite</module> -->
+    <!-- <module>camel&#45;velocity</module> -->
+    <!-- <module>camel&#45;vertx</module> -->
+    <!-- <module>camel&#45;weather</module> -->
+    <!-- <module>camel&#45;web</module> -->
+    <!-- <module>camel&#45;websocket</module> -->
+    <!-- <module>camel&#45;xmlbeans</module> -->
+    <!-- <module>camel&#45;xmljson</module> -->
+    <!-- <module>camel&#45;xmlrpc</module> -->
+    <!-- <module>camel&#45;xmlsecurity</module> -->
+    <!-- <module>camel&#45;xmpp</module> -->
+    <!-- <module>camel&#45;xstream</module> -->
+    <!-- <module>camel&#45;yammer</module> -->
+    <!-- <module>camel&#45;zipfile</module> -->
+    <!-- <module>camel&#45;zookeeper</module> -->
   </modules>
 
 
