--- a/pom.xml
+++ b/pom.xml
@@ -134,14 +134,14 @@
 
   <modules>
     <module>parent</module>
-    <module>etc</module>
-    <module>buildingtools</module>
+    <!-- <module>etc</module> -->
+    <!-- <module>buildingtools</module> -->
     <module>camel-core</module>
     <module>components</module>
-    <module>tooling</module>
-    <module>platforms</module>
-    <module>tests</module>
-    <module>examples</module>
+    <!-- <module>tooling</module> -->
+    <!-- <module>platforms</module> -->
+    <!-- <module>tests</module> -->
+    <!-- <module>examples</module> -->
   </modules>
 
   <scm>
